# Dash

./: Dash_API.postman_collection.json  LICENSE  NEXT_STEPS.md  plan.md  test_portfolio_zerodha.csv
backend/: .env.example  .gitignore  README.md  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260125_2137_d5810b9a60a0_initial_portfolio_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  insights.py  portfolio.py  snapshots.py  stocks.py
backend/app/api/v1/: portfolio.py
backend/app/core/: config.py  database.py
backend/app/data/: __init__.py  yahoo.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/jobs/: __init__.py  change_detection_job.py  snapshot_job.py
backend/app/models/: __init__.py  portfolio.py
backend/app/schemas/: __init__.py  portfolio.py
backend/app/services/: portfolio_parser.py
backend/core/analysis/: __init__.py  fundamentals.py  risk.py  trend.py
backend/core/snapshots/: __init__.py  builder.py  comparator.py  models.py
backend/llm/: __init__.py  chains.py  prompts.py
backend/test/: test_snapshots.py
